--- a/index.html
+++ b/index.html
@@ -87,17 +87,16 @@
                     data-aos-duration="500" 
                     data-aos-delay="100"
                 >
-                    <img src="images/1A.png" alt="cict">
-                    <!-- <img src="images/NEUST-outer.png" alt="cict"> -->
+                    <img src="images/1A.png">
                 </div>
             </nav>
         </header>
         <div class="overlay"></div>
         <div class="home-content" id="home">
-            <img class="large-logo" src="/images/NEUST-inner.png" alt="NEUST-inner" >
-            <img class="large-logo" src="/images/NEUST-outer.png" alt="NEUST-outer">
-            <img class="large-logo" src="/images/CICT-inner.png" alt="CICT-inner">
-            <img class="large-logo" src="/images/CICT-outer.png" alt="CICT-outer">
+            <img class="large-logo" src="/images/NEUST-inner.webp">
+            <img class="large-logo" src="/images/NEUST-outer.webp">
+            <img class="large-logo" src="/images/CICT-inner.webp">
+            <img class="large-logo" src="/images/CICT-outer.webp">
             <div class="intro-text">
                 <div class="intro-title">
                     <p  data-aos="fade-zoom-in" 
@@ -170,9 +169,9 @@
                     data-aos-delay="200"
                 >
                     <img 
-                        src="images/officer1_lazy.png"
-                        data-src="images/officer1.png"
-                        alt="Officer1"
+                        src="images/officer1_lazy.webp"
+                        data-src="images/officer1.webp"
+                        alt=""
                         class="lazy-load"
                     >
                     <div class="officer-details">
@@ -189,9 +188,9 @@
                     data-aos-delay="300"
                 >
                     <img
-                        src="images/officer2_lazy.png"
-                        data-src="images/officer2.png"
-                        alt="Officer2"
+                        src="images/officer2_lazy.webp"
+                        data-src="images/officer2.webp"
+                        alt=""
                         class="lazy-load"
                     >
                     <div class="officer-details">
@@ -206,9 +205,9 @@
                     data-aos-delay="400"
                 >
                     <img 
-                        src="images/officer3_lazy.png"
-                        data-src="images/officer3.png"
-                        alt="Officer3"
+                        src="images/officer3_lazy.webp"
+                        data-src="images/officer3.webp"
+                        alt=""
                         class="lazy-load"
                     >
                     <div class="officer-details">
@@ -223,9 +222,9 @@
                     data-aos-delay="500"
                 >
                     <img                         
-                        src="images/officer4_lazy.png"
-                        data-src="images/officer4.png"
-                        alt="Officer4"
+                        src="images/officer4_lazy.webp"
+                        data-src="images/officer4.webp"
+                        alt=""
                         class="lazy-load"
                     >
                     <div class="officer-details">
@@ -240,9 +239,9 @@
                     data-aos-delay="600"
                 >
                     <img 
-                        src="images/officer5_lazy.png"
-                        data-src="images/officer5.png"
-                        alt="Officer5"
+                        src="images/officer5_lazy.webp"
+                        data-src="images/officer5.webp"
+                        alt=""
                         class="lazy-load"
                         >
                     <div class="officer-details">
@@ -257,9 +256,9 @@
                     data-aos-delay="700"
                 >
                     <img 
-                        src="images/officer6_lazy.png"
-                        data-src="images/officer6.png"
-                        alt="Officer6"
+                        src="images/officer6_lazy.webp"
+                        data-src="images/officer6.webp"
+                        alt=""
                         class="lazy-load"
                     >
                     <div class="officer-details">
@@ -274,9 +273,9 @@
                     data-aos-delay="800"
                 >
                     <img 
-                        src="images/officer7_lazy.png"
-                        data-src="images/officer7.png"
-                        alt="Officer7"
+                        src="images/officer7_lazy.webp"
+                        data-src="images/officer7.webp"
+                        alt=""
                         class="lazy-load"
                     >
                     <div class="officer-details">
@@ -329,16 +328,16 @@
                                     <p>M 10:00 AM - 12:00 PM</p>
                                     <p>RM 306</p>
                                     <div id="schedule1" class="schedule"></div>
-                                    <img src="images/helloKitty.png" alt="hellokitty">
+                                    <img src="images/helloKitty.png" alt="">
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Leona, Rodibelle Figueroa <br><span>or Ma'am Arvee</span>
+                                    <p>Leona, Rodibelle Figueroa <br><span>or Ma'am Arvee</span></p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn m-1 schedbutton">Open <i
@@ -417,13 +416,13 @@
                                     <div id="schedule2" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Dela Cruz, Jobelle
+                                    <p>Dela Cruz, Jobelle</p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn m-2 schedbutton">Open <i
@@ -525,8 +524,8 @@
                                     <div id="schedule3" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
@@ -625,13 +624,13 @@
                                     <div id="schedule4" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Quipse, Felino
+                                    <p>Quipse, Felino</p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn t-2 schedbutton">Open <i
@@ -731,13 +730,13 @@
                                     <div id="schedule5" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Alcantara, Jiezel
+                                    <p>Alcantara, Jiezel</p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn t-3 schedbutton">Open <i
@@ -839,8 +838,8 @@
                                     <div id="schedule6" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
@@ -928,13 +927,13 @@
                                     <div id="schedule7" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Maliwat, Randy
+                                    <p>Maliwat, Randy</p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn w-2 schedbutton">Open <i
@@ -1014,13 +1013,13 @@
                                     <img src="images/helloKitty.png" alt="hellokitty">
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Leona, Rodibelle Figueroa <br><span>or Ma'am Arvee</span>
+                                    <p>Leona, Rodibelle Figueroa <br><span>or Ma'am Arvee</span></p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn w-3 schedbutton">Open <i
@@ -1107,8 +1106,8 @@
                                     <div id="schedule9" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
@@ -1192,13 +1191,13 @@
                                     <div id="schedule10" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Dela Cruz, Jobelle
+                                    <p>Dela Cruz, Jobelle</p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn th-2 schedbutton">Open <i
@@ -1300,8 +1299,8 @@
                                     <div id="schedule11" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
@@ -1400,13 +1399,13 @@
                                     <div id="schedule12" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Ong, Dr. Darwin
+                                    <p>Ong, Dr. Darwin</p>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn f-2 schedbutton">Open <i
@@ -1518,8 +1517,8 @@
                                     <div id="schedule13" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
-                                    <img src="images/CICT-outer.png" alt="CICT">
-                                    <img src="images/CICT-inner.png" alt="CICT">
+                                    <img src="images/CICT-outer.webp" alt="">
+                                    <img src="images/CICT-inner.webp" alt="">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
@@ -1625,22 +1624,22 @@
                 >
                     <div class="img">
                         <a href="images/student1.jpg" target="_blank">
-                            <img src="images/student1.jpg" alt="stdnt1">
+                            <img src="images/student1.jpg" alt="">
                         </a>
                     </div>
                     <div class="img">
                         <a href="images/student2.jpg" target="_blank">
-                            <img src="images/student2.jpg" alt="stdnt2">
+                            <img src="images/student2.jpg" alt="">
                         </a>
                     </div>
                     <div class="img">
                         <a href="images/student3.jpg" target="_blank">
-                            <img src="images/student3.jpg" alt="stdnt3">
+                            <img src="images/student3.jpg" alt="">
                         </a>
                     </div>
                     <div class="img">
                         <a href="images/student4.jpg" target="_blank">
-                            <img src="images/student4.jpg" alt="stdnt4">
+                            <img src="images/student4.jpg" alt="">
                         </a>
                     </div>
                 </div>
@@ -1649,22 +1648,22 @@
         <footer>
             <div class="footer-container">
                 <div class="developer">
-                    <p>Developed by <a href="https://cedricangulo.vercel.app" target="_blank">Cedric Angulo</a></p>
+                    <p>Developed by <a href="https://cedricangulo.vercel.app" target="_blank">Cedric Angulo</a></p><p class="lastUp">Last update: Mon, Nov 6, 2023 21:57:32</p>
                 </div>
                 <div class="vercel">
                     <div class="vercel-text">
                         <p>Deployed in</p>
                     </div>
                     <div class="vercel-logo">
-                        <img src="images/vercelD.png" alt="vercel" class="vercelD">
-                        <img src="images/vercelL.png" alt="vercel" class="vercelL">
+                        <img src="images/vercelD.png" alt="" class="vercelD">
+                        <img src="images/vercelL.png" alt="" class="vercelL">
                     </div>
                 </div>
             </div>
         </footer>
     </section>
-    <script src="JS/announcement.js"></script>
     <script src="JS/script.js"></script>
+    <script src="JS/announcement.js"></script>
     <script src="JS/sched.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
